Fix version number for root project
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11936 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: e2acce04466c9d9605643f36475b7513803918ea

--- a/art2_projects/org.kermeta.art2.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.model/pom.xml
@@ -51,6 +51,7 @@
             </plugin>
 
 
+<!-- Synch MANIFEST for eclipse user -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>truezip-maven-plugin</artifactId>
@@ -63,22 +64,12 @@
                         </goals>
                         <phase>install</phase>
                         <configuration>
-                            <verbose>true</verbose>
-
                             <files>
                                 <file>
                                     <source>${project.build.outputDirectory}/META-INF/MANIFEST.MF</source>
                                     <outputDirectory>${project.basedir}/META-INF</outputDirectory>
                                 </file>
                             </files>
-                            <!--
-                            <filesets>
-                                <fileset>
-                                    <directory>${archive}/META-INF2</directory>
-                                    <outputDirectory>${project.baseUri}/META-INF</outputDirectory>
-                                </fileset>
-                            </filesets>
--->
                         </configuration>
                     </execution>
 
