--- a/art2_projects/org.kermeta.art2.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.model/pom.xml
@@ -40,9 +40,8 @@
                 <configuration>
                     <instructions>
                         <Export-Package>org.kermeta.art2,org.kermeta.art2.impl,org.kermeta.art2.util</Export-Package>
-                        <Import-Package>
-						org.eclipse.emf.*,
-						org.osgi.framework
+                        <Bundle-SymbolicName>org.kermeta.art2.model;singleton:=true</Bundle-SymbolicName>
+                        <Import-Package>org.eclipse.emf.*,org.osgi.framework
                         </Import-Package>
                         <Bundle-ClassPath>.</Bundle-ClassPath>
                     </instructions>
