--- a/art2_projects/org.kermeta.art2.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.model/pom.xml
@@ -30,7 +30,7 @@
             </plugin>
 
 
-
+			<!-- Creation of the bundle jar -->
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
@@ -44,13 +44,19 @@
                         <Import-Package>org.eclipse.emf.*,org.osgi.framework
                         </Import-Package>
                         <Bundle-ClassPath>.</Bundle-ClassPath>
+                        <!-- additional resources in the bundle -->                        
+                        <Include-Resource>{maven-resources},
+                        	metamodel=metamodel,
+                        	plugin.xml,
+                        	plugin.properties
+                        </Include-Resource>
                     </instructions>
                 </configuration>
 		
             </plugin>
 
 
-<!-- Synch MANIFEST for eclipse user -->
+			<!-- Synch MANIFEST for eclipse user -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>truezip-maven-plugin</artifactId>
