--- a/art2_projects/org.kermeta.art2.model/plugin.xml
+++ b/art2_projects/org.kermeta.art2.model/plugin.xml
@@ -13,7 +13,7 @@
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
             uri="http://art/2.0"
-            class="art2.Art2Package"
+            class="org.kermeta.art2.Art2Package"
             genModel="metamodel/art.genmodel"/>
    </extension>
 
