--- a/art2_projects/org.kermeta.art2.model.edit/pom.xml
+++ b/art2_projects/org.kermeta.art2.model.edit/pom.xml
@@ -16,20 +16,27 @@
         <version>2</version>
     </parent>
 
+	
+	
 
     <build>
         <sourceDirectory>src</sourceDirectory>
+        <!-- Add resources from the plugin structure -->
+        <resources>
+	      	<resource>
+	        	<directory>.</directory>
+	        	<includes>
+	          		<include>plugin.xml</include>
+	          		<include>plugin.properties</include>
+	        	</includes>
+	      	</resource>
+	      	<resource>
+	        	<directory>icons</directory>
+	        	<targetPath>icons</targetPath>
+	      	</resource>
+	    </resources>
         <plugins>
-
-	<plugin>
-        <artifactId>maven-eclipse-plugin</artifactId>
-        <version>2.8</version>
-        <configuration>
-          <pde>true</pde>
-        </configuration>
-      </plugin>
-
-
+			<!-- Creation of the bundle jar and its manifest -->
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
@@ -38,7 +45,8 @@
 				
                 <configuration>
                     <instructions>
-                        <Export-Package>org.kermeta.art2,org.kermeta.art2.impl,org.kermeta.art2.util</Export-Package>
+                    	<Bundle-SymbolicName>org.kermeta.art2.model.edit;singleton:=true</Bundle-SymbolicName>                        
+                        <Export-Package>org.kermeta.art2.provider</Export-Package>
                         <Import-Package>
                         org.kermeta.art2,
                         org.kermeta.art2.impl,
@@ -47,11 +55,43 @@
 						org.osgi.framework
                         </Import-Package>
                         <Bundle-ClassPath>.</Bundle-ClassPath>
+                        Bundle-ActivationPolicy: lazy
+                        <!-- additional resources in the bundle -->                        
+                        <!-- <Include-Resource>{maven-resources},
+                        	icons=icons,
+                        	plugin.xml,
+                        	plugin.properties
+                        </Include-Resource> -->
                     </instructions>
                 </configuration>
 				
 				
             </plugin>
+            <!-- copy generated MANIFEST in the project for eclipse user -->
+             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>truezip-maven-plugin</artifactId>
+                <version>1.0-beta-4</version>
+                <executions>
+                    <execution>
+                        <id>copy-out-files</id>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <phase>install</phase>
+                        <configuration>
+                            <files>
+                                <file>
+                                    <source>${project.build.outputDirectory}/META-INF/MANIFEST.MF</source>
+                                    <outputDirectory>${project.basedir}/META-INF</outputDirectory>
+                                </file>
+                            </files>
+                        </configuration>
+                    </execution>
+
+                </executions>
+            </plugin> 
+            
         </plugins>
     </build>
     
