add resources to the jar
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11943 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: a1e9d978e302822e9015e85336bc208b87aef3f8

--- a/art2_projects/org.kermeta.art2.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.model/pom.xml
@@ -19,6 +19,20 @@
 
     <build>
         <sourceDirectory>src</sourceDirectory>
+        <!-- Add resources from the plugin structure -->
+        <resources>
+	      	<resource>
+	        	<directory>.</directory>
+	        	<includes>
+	          		<include>plugin.xml</include>
+	          		<include>plugin.properties</include>
+	        	</includes>
+	      	</resource>
+	      	<resource>
+	        	<directory>metamodel</directory>
+	        	<targetPath>metamodel</targetPath>
+	      	</resource>
+	    </resources>
         <plugins>
 
             <plugin>
@@ -30,7 +44,7 @@
             </plugin>
 
 
-			<!-- Creation of the bundle jar -->
+			<!-- Creation of the bundle jar and its manifest -->
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
@@ -45,11 +59,11 @@
                         </Import-Package>
                         <Bundle-ClassPath>.</Bundle-ClassPath>
                         <!-- additional resources in the bundle -->                        
-                        <Include-Resource>{maven-resources},
+                        <!-- <Include-Resource>{maven-resources},
                         	metamodel=metamodel,
                         	plugin.xml,
                         	plugin.properties
-                        </Include-Resource>
+                        </Include-Resource> -->
                     </instructions>
                 </configuration>
 		
