added BundleActivation-strategy to the manifest added a header to the pom.xml
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11950 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: d5f92e3cd211d75105d9225b4638833a2526c787

--- a/art2_projects/org.kermeta.art2.model.edit/pom.xml
+++ b/art2_projects/org.kermeta.art2.model.edit/pom.xml
@@ -1,4 +1,6 @@
-
+<!-- $Id:$ -->
+<!-- License    : EPL 									 -->
+<!-- Copyright  : IRISA / INRIA / Universite de Rennes 1 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -21,7 +23,7 @@
 
     <build>
         <sourceDirectory>src</sourceDirectory>
-        <!-- Add resources from the plugin structure -->
+        <!-- Add resources from the plugin structure to the jar -->
         <resources>
 	      	<resource>
 	        	<directory>.</directory>
@@ -44,8 +46,7 @@
                 <extensions>true</extensions>
 				
                 <configuration>
-                    <instructions>
-                        <includez>foo.MF</includez>                    	
+                    <instructions>                    	
                     	<Bundle-SymbolicName>org.kermeta.art2.model.edit;singleton:=true</Bundle-SymbolicName>                        
                         <Export-Package>org.kermeta.art2.provider</Export-Package>
                         <Import-Package>
@@ -58,7 +59,8 @@
                         <Bundle-ClassPath>.</Bundle-ClassPath>
                         <!-- add extra element in the manifest, copy them from this file
                              Bundle-ActivationPolicy: lazy -->
-                        <_include>resources/META-INF/MANIFEST.MF</_include>
+                        <_include>resources/META-INF/MANIFEST-part.MF</_include>
+                        
                         <!-- additional resources in the bundle already done via the main resource element-->                        
                         <!-- <Include-Resource>{maven-resources},
                         	icons=icons,
