--- a/maventools_projects/org.kermeta.tools.simple.maven.osgi.file.deploy/.settings/org.eclipse.jdt.core.prefs
+++ b/maventools_projects/org.kermeta.tools.simple.maven.osgi.file.deploy/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,6 @@
-#Tue Jul 27 16:38:41 CEST 2010
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
+#Wed Jul 28 11:14:39 CEST 2010
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.source=1.5
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
 org.eclipse.jdt.core.compiler.compliance=1.5
+org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
+org.eclipse.jdt.core.compiler.source=1.5
