--- a/art2_projects/org.kermeta.art2.model.editor/pom.xml
+++ b/art2_projects/org.kermeta.art2.model.editor/pom.xml
@@ -47,7 +47,8 @@
 				
                 <configuration>
                     <instructions>                    	
-                    	<Bundle-SymbolicName>org.kermeta.art2.model.editor;singleton:=true</Bundle-SymbolicName>                        
+                    	<Bundle-SymbolicName>org.kermeta.art2.model.editor;singleton:=true</Bundle-SymbolicName> 
+                    	<Bundle-Activator>org.kermeta.art2.presentation.ArtEditorPlugin$Implementation</Bundle-Activator>                    	                       
                         <Export-Package>org.kermeta.art2.presentation</Export-Package>
                         <Import-Package>
                         org.kermeta.art2,
