--- a/art2_projects/org.kermeta.art2.model.editor/pom.xml
+++ b/art2_projects/org.kermeta.art2.model.editor/pom.xml
@@ -42,7 +42,7 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.0.0</version>
+                <version>2.1.0</version>
                 <extensions>true</extensions>
 				
                 <configuration>
@@ -50,45 +50,47 @@
                     	<Bundle-SymbolicName>org.kermeta.art2.model.editor;singleton:=true</Bundle-SymbolicName> 
                     	<Bundle-Activator>org.kermeta.art2.presentation.ArtEditorPlugin$Implementation</Bundle-Activator>                    	                       
                         <Export-Package>org.kermeta.art2.presentation</Export-Package>
-                        <Import-Package>
-                        org.kermeta.art2,
-                        org.kermeta.art2.impl,
-                        org.kermeta.art2.util,
-                        org.kermeta.art2.provider,
-						org.eclipse.emf.*,
-						org.eclipse.core.resources,
-						org.eclipse.core.runtime,
-						org.eclipse.jface.action,
-						org.eclipse.jface.dialogs,
-						org.eclipse.jface.operation,
-						org.eclipse.jface.resource,
-						org.eclipse.jface.viewers,
-						org.eclipse.jface.wizard,
-						org.eclipse.swt.custom,
-						org.eclipse.swt.dnd, 
-						org.eclipse.swt.events, 
-						org.eclipse.swt.graphics, 
-						org.eclipse.swt.layout, 
-						org.eclipse.swt.widgets, 
-						org.eclipse.ui, 
-						org.eclipse.ui.actions, 
-						org.eclipse.ui.dialogs, 
-						org.eclipse.ui.ide, 
-						org.eclipse.ui.part, 
-						org.eclipse.ui.views.contentoutline, 
-						org.eclipse.ui.views.properties,
-						org.osgi.framework
-                        </Import-Package>
+                        <!-- Use Require-Bundle dependencies only for bundles for we don't have control and that may introduce splitted package issue ex: org.eclipse.core.runtime -->
+                        <Require-Bundle>org.eclipse.core.runtime,
+							org.eclipse.core.resources;visibility:=reexport,
+							org.eclipse.emf.ecore.xmi;visibility:=reexport,
+							org.eclipse.emf.edit.ui;visibility:=reexport,
+							org.eclipse.ui.ide;visibility:=reexport
+                        </Require-Bundle>
+                        <!-- use the ! for avoiding to import some packages that are already there with the Require-Bundle -->
+                     	<Import-Package>
+							!org.eclipse.core.resources,
+							!org.eclipse.core.runtime, 
+							!org.eclipse.ui, 
+							!org.eclipse.ui.actions, 
+							!org.eclipse.ui.dialogs, 
+							!org.eclipse.ui.ide, 
+							!org.eclipse.ui.part, 
+							!org.eclipse.ui.views.contentoutline, 
+							!org.eclipse.ui.views.properties,
+							!org.eclipse.jface.action,
+							!org.eclipse.jface.dialogs,
+							!org.eclipse.jface.operation,
+							!org.eclipse.jface.resource,
+							!org.eclipse.jface.viewers,
+							!org.eclipse.jface.wizard,
+							!org.eclipse.swt.custom,
+							!org.eclipse.swt.dnd, 
+							!org.eclipse.swt.events, 
+							!org.eclipse.swt.graphics, 
+							!org.eclipse.swt.layout, 
+							!org.eclipse.swt.widgets,
+                        	org.kermeta.art2,
+                        	org.kermeta.art2.impl,
+                        	org.kermeta.art2.util,
+                        	org.kermeta.art2.provider,
+							org.eclipse.emf.*,
+							org.osgi.framework
+                        </Import-Package>                        
                         <Bundle-ClassPath>.</Bundle-ClassPath>
                         <!-- add extra element in the manifest, copy them from this file
-                             Bundle-ActivationPolicy: lazy -->
+                             ex: Bundle-ActivationPolicy: lazy -->
                         <_include>resources/META-INF/MANIFEST-part.MF</_include>
-                        <!-- additional resources in the bundle already done via the main resource element-->                        
-                        <!-- <Include-Resource>{maven-resources},
-                        	icons=icons,
-                        	plugin.xml,
-                        	plugin.properties
-                        </Include-Resource> -->
                     </instructions>
                 </configuration>
 				
