configuration for compiling/running in eclipse
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11979 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: a39b57de4fdf038249459ce46d5b78d8331eb7b6

--- a/art2_projects/org.kermeta.art2.framework/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework/pom.xml
@@ -90,7 +90,30 @@
                     </jvmArgs>
                 </configuration>
             </plugin>
+			<!-- Synch MANIFEST for eclipse user -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>truezip-maven-plugin</artifactId>
+                <version>1.0-beta-4</version>
+                <executions>
+                    <execution>
+                        <id>copy-out-files</id>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <phase>install</phase>
+                        <configuration>
+                            <files>
+                                <file>
+                                    <source>${project.build.outputDirectory}/META-INF/MANIFEST.MF</source>
+                                    <outputDirectory>${project.basedir}/META-INF</outputDirectory>
+                                </file>
+                            </files>
+                        </configuration>
+                    </execution>
 
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
