refactored name (missing r in org.kermeta)
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12000 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: d3902a29d38f104666116f528367a6dfc60aecbb

--- a/art2_projects/org.kemeta.art2.editor.eclipse/.project
+++ b/art2_projects/org.kemeta.art2.editor.eclipse/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.kemeta.art2.editor.eclipse</name>
+	<name>org.kermeta.art2.editor.eclipse</name>
 	<comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
 	<projects>
 		<project>art2.ui.editor</project>
@@ -23,7 +23,7 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
-		<buildCommand>
+		<!-- <buildCommand>
 			<name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>
 			<arguments>
 				<dictionary>
@@ -31,7 +31,7 @@
 					<value>&lt;project&gt;/.externalToolBuilders/Maven_Ant_Builder.launch</value>
 				</dictionary>
 			</arguments>
-		</buildCommand>
+		</buildCommand> -->
 		<buildCommand>
 			<name>org.maven.ide.eclipse.maven2Builder</name>
 			<arguments>
