--- a/art2_projects/org.kermeta.art2.ui.framework/pom.xml
+++ b/art2_projects/org.kermeta.art2.ui.framework/pom.xml
@@ -19,25 +19,17 @@
     </parent>
     <build>
      	<plugins>
-			<!-- Creation of the bundle jar and its manifest -->
+            <!-- Creation of the bundle jar and its manifest -->
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <version>2.1.0</version>
                 <extensions>true</extensions>
-				
                 <configuration>
-                    <instructions>                    	
-                    	<Bundle-SymbolicName>org.kemeta.art2.ui.framework;singleton:=true</Bundle-SymbolicName> 
-                    	<!-- <Bundle-Activator>org.kemeta.art2.editor.eclipse.Activator</Bundle-Activator> -->                    	                       
+                    <instructions>                    	                  	                       
                         <Export-Package>
-                        	org.kemeta.art2.ui.framework,
-                        	org.kemeta.art2.ui.framework.elements,
-                        	org.jdesktop.swingx
+                        	org.jdesktop.swingx.*,*
                         </Export-Package>
-                        <!-- Use Require-Bundle dependencies only for bundles for we don't have control and that may introduce splitted package issue ex: org.eclipse.core.runtime -->
-                        <Require-Bundle>
-                        </Require-Bundle>
                         <!-- use the ! for avoiding to import some packages that are already there with the Require-Bundle -->
                      	<Import-Package>
 							javax.*,
@@ -49,17 +41,13 @@
 							org.eclipse.emf.*,
 							org.osgi.framework
                         </Import-Package>                        
-                        <Bundle-ClassPath>.</Bundle-ClassPath>
                         <!-- add extra element in the manifest, copy them from this file
                              ex: Bundle-ActivationPolicy: lazy -->
                         <!-- <_include>src/main/resources/MANIFEST-part.MF</_include> -->
                         <!-- embed any dependencies with artifactId swingx -->
-						<Embed-Dependency>swingx</Embed-Dependency>
-                        
+			<Embed-Dependency>swingx</Embed-Dependency>
                     </instructions>
-                </configuration>
-				
-				
+                </configuration>	
             </plugin>
     	</plugins>
 	</build>
@@ -70,6 +58,5 @@
             <version>1.6</version>
         </dependency>
     </dependencies>
-
 
 </project>
