--- a/art2_projects/org.kermeta.art2.platform.eclipse/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.eclipse/pom.xml
@@ -1,9 +1,11 @@
 
+
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>art2.platform.equinox</artifactId>
-    <packaging>jar</packaging>
+    <packaging>bundle</packaging>
     <name>ART2 :: Platform :: Equinox</name>
     <url>http://maven.apache.org</url>
 
@@ -214,6 +216,15 @@
             <artifactId>art2.core.bus.activemq</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.core</artifactId>
+            <version>4.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kermeta.eclipse</groupId>
+            <artifactId>org.eclipse.equinox.common</artifactId>
+            <version>[3.5.1.R35x_v20090807-1100,)</version>
+        </dependency>
     </dependencies>
 </project>
