ROOT POM Refactor : ADD ANT PLUGIN + SCALA + APT PLUGIN
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12021 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: ab384d87222bd0441542d9a91eb78d50c5d78bad

--- a/art2_projects/org.kermeta.art2.framework/.settings/org.eclipse.jdt.core.prefs
+++ b/art2_projects/org.kermeta.art2.framework/.settings/org.eclipse.jdt.core.prefs
@@ -1,6 +1,5 @@
-#Tue Aug 03 09:02:00 CEST 2010
+#Mon Mar 01 13:33:06 CET 2010
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
-org.eclipse.jdt.core.compiler.compliance=1.6
-org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
-org.eclipse.jdt.core.compiler.source=1.6
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.2
+org.eclipse.jdt.core.compiler.compliance=1.4
+org.eclipse.jdt.core.compiler.source=1.3
