--- a/art2_projects/org.kermeta.art2.framework/.settings/org.maven.ide.eclipse.prefs
+++ b/art2_projects/org.kermeta.art2.framework/.settings/org.maven.ide.eclipse.prefs
@@ -1,4 +1,4 @@
-#Tue Aug 03 09:01:50 CEST 2010
+#Mon Mar 01 13:33:06 CET 2010
 activeProfiles=
 eclipse.preferences.version=1
 fullBuildGoals=process-test-resources
