--- a/art2_projects/org.kermeta.art2.framework/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework/pom.xml
@@ -27,15 +27,11 @@
             <version>${art2.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>${scala.version}</version>
-        </dependency>
-        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.annotation</artifactId>
             <version>${art2.version}</version>
         </dependency>
+
 
         <dependency>
             <groupId>com.sun</groupId>
@@ -50,6 +46,7 @@
 
     <build>
         <plugins>
+            <!-- Override BnD plugin config -->
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
@@ -63,56 +60,6 @@
                         <Export-Package>org.kermeta.art2.framework,org.kermeta.art2.framework.*</Export-Package>
                     </instructions>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.scala-tools</groupId>
-                <artifactId>maven-scala-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>scala-compile-first</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>scala-test-compile</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <jvmArgs>
-                        <jvmArg>-Xmx1024m</jvmArg>
-                    </jvmArgs>
-                </configuration>
-            </plugin>
-			<!-- Synch MANIFEST for eclipse user -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>truezip-maven-plugin</artifactId>
-                <version>1.0-beta-4</version>
-                <executions>
-                    <execution>
-                        <id>copy-out-files</id>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <phase>install</phase>
-                        <configuration>
-                            <files>
-                                <file>
-                                    <source>${project.build.outputDirectory}/META-INF/MANIFEST.MF</source>
-                                    <outputDirectory>${project.basedir}/META-INF</outputDirectory>
-                                </file>
-                            </files>
-                        </configuration>
-                    </execution>
-
-                </executions>
             </plugin>
         </plugins>
     </build>
