Add Save strategy
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12064 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: dab735222614d509933b9cae0e7a690acc213c75

--- a/art2_projects/org.kermeta.art2.platform.eclipse/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.eclipse/pom.xml
@@ -223,5 +223,14 @@
             <artifactId>org.eclipse.equinox.common</artifactId>
             <version>[3.5.1.R35x_v20090807-1100,)</version>
         </dependency>
+
+
+         <dependency>
+            <groupId>org.kermeta.language</groupId>
+            <artifactId>language.workbench</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+
+
     </dependencies>
 </project>
