--- a/art2_projects/org.kermeta.art2.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.root/pom.xml
@@ -46,6 +46,7 @@
                         <value>art2.lib.id=${project.artifactId}</value>
                         <value>art2.lib.group=${project.groupId}</value>
                         <value>art2.lib.version=${project.version}</value>
+                        <value>art2.lib.target=${basedir}/src/main/resources/ART2-INF/art2Lib.art2</value>
                     </options>
                 </configuration>
                 <executions>
