--- a/art2_projects/org.kermeta.art2.core.bus.activemq/pom.xml
+++ b/art2_projects/org.kermeta.art2.core.bus.activemq/pom.xml
@@ -14,6 +14,7 @@
         <groupId>org.kermeta.art2</groupId>
         <version>2</version>
     </parent>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.activemq</groupId>
@@ -143,4 +144,27 @@
             </plugin>
         </plugins>
     </build>
+
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.5</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.2</version>
+            </plugin>
+        </plugins>
+    </reporting>
+
+
 </project>
