Add Save strategy
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12076 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 2089c0bce6001ee4c007659fad92cfbe59940c3a

--- a/art2_projects/org.kermeta.art2.platform.eclipse/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.eclipse/pom.xml
@@ -25,6 +25,7 @@
         <osgi.nl>fr_FR</osgi.nl>
         <osgi.noShutdown>true</osgi.noShutdown>
         <consoleLog>true</consoleLog>
+        <art2.node.name>duke</art2.node.name>
     </properties>
 
     <build>
