--- a/art2_projects/org.kermeta.art2.runtime/pom.xml
+++ b/art2_projects/org.kermeta.art2.runtime/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>art2.runtime</artifactId>
     <packaging>bundle</packaging>
-    <name>ART2 :: Runtime</name>
+    <name>ART2 :: Core :: JMS</name>
 
     <groupId>${parent.groupId}</groupId>
     <version>${art2.version}</version>
@@ -18,11 +18,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>art2.kompare</artifactId>
-            <version>${art2.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activeio-core</artifactId>
             <version>3.1.2</version>
@@ -31,12 +26,6 @@
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-core</artifactId>
             <version>5.3.2</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.1</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -106,12 +95,12 @@
                             !javax.ejb,
                             !javax.xml.ws,
                             !org.apache.commons.*,
+                            !com.thoughtworks.*,
                             org.eclipse.emf.*,
                             scala.*,
                             org.xml.*,
                             org.w3c.*,
                             org.osgi.*,
-                            com.thoughtworks.*,
                             art2.*,
                             org.kermeta.art2.framework.*,
                             javax.xml.*,javax.net.*,javax.jms.*,javax.management.*,javax.naming.*,javax.transaction.*,
@@ -127,6 +116,7 @@
                             org.apache.kahadb.*,
                             org.apache.commons.*,
                        </Private-Package>
+                       
 
                        <!-- <Import-Package>
                                                     !org.apache.maven.*,!javax.mail.*,!org.apache.tools.ant.*,!com.sun.jdmk.comm,!sun.misc,!org.kermeta.log4j.util,!org.eclipse.core.*,*
