--- a/art2_projects/org.kermeta.art2.platform.eclipse/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.eclipse/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>art2.platform.equinox</artifactId>
+    <artifactId>art2.platform.eclipse</artifactId>
     <packaging>bundle</packaging>
     <name>ART2 :: Platform :: Equinox</name>
     <url>http://maven.apache.org</url>
