--- a/art2_projects/org.kermeta.art2.platform.eclipse/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.eclipse/pom.xml
@@ -53,6 +53,21 @@
 
                 </configuration>
             </plugin>
+            <!-- Creation of the bundle jar and its manifest -->
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.1.0</version>
+                <extensions>true</extensions>
+				
+                <configuration>
+                    <instructions>                    	
+                    	<Bundle-Activator>org.kermeta.art2.platform.eclipse.provisionning.Art2ProvisionningActivator</Bundle-Activator>
+                    	<Export-Package>org.kermeta.art2.platform.eclipse.provisionning</Export-Package>
+                    	<Bundle-ClassPath>.</Bundle-ClassPath>
+                    </instructions>
+               </configuration>    
+              </plugin>
         </plugins>
     </build>
 
