added repository definition
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12130 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: c77a76cbdc5bbf5a8608a8b6f30a7a0ce27fce21

--- a/utilities_projects/org.kermeta.utilities.eclipse.jface/pom.xml
+++ b/utilities_projects/org.kermeta.utilities.eclipse.jface/pom.xml
@@ -84,6 +84,18 @@
             <version>[3.5.2.M20100120-0800,)</version>
         </dependency>
 	</dependencies>
+	
+	
+	<repositories>
+        <repository>
+            <id>kermeta Public</id>
+            <url>http://www.kermeta.org/maven2</url>
+        </repository>
+        <repository>
+            <id>kermeta PublicSnapShots</id>
+            <url>http://www.kermeta.org/maven2-snapshots</url>
+        </repository>
+     </repositories>
 	<distributionManagement>
 		<repository>
       		<id>tipimouss-local-maven-repository</id>
