--- a/utilities_projects/org.kermeta.utilities.eclipse.jface/pom.xml
+++ b/utilities_projects/org.kermeta.utilities.eclipse.jface/pom.xml
@@ -75,13 +75,33 @@
         </dependency>
         <dependency>
             <groupId>org.kermeta.eclipse</groupId>
+            <artifactId>org.eclipse.equinox.common</artifactId>
+            <version>[3.5.1.R35x_v20090807-1100,)</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kermeta.eclipse</groupId>
             <artifactId>org.eclipse.jface</artifactId>
             <version>[3.5.2.M20100120-0800,)</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kermeta.eclipse</groupId>
+            <artifactId>org.eclipse.swt</artifactId>
+            <version>[3.5.2.v3557f,)</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kermeta.eclipse</groupId>
+            <artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
+            <version>3.5.2.v3557f</version>
         </dependency>
 		<dependency>
             <groupId>org.kermeta.eclipse</groupId>
             <artifactId>org.eclipse.ui</artifactId>
             <version>[3.5.2.M20100120-0800,)</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kermeta.eclipse</groupId>
+            <artifactId>org.eclipse.ui.workbench</artifactId>
+            <version>[3.5.2.M20100113-0800,)</version>
         </dependency>
 	</dependencies>
 	
