refactored plugin name added dependency to equinox.preferences
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12136 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 6c26fec2c06f8abb6b56600f3a9e4e8950be6301

--- a/utilities_projects/org.kermeta.utils.provisionner.eclipse/plugin.xml
+++ b/utilities_projects/org.kermeta.utils.provisionner.eclipse/plugin.xml
@@ -5,20 +5,20 @@
          point="org.eclipse.ui.preferencePages">
       <page
             category="org.eclipse.ui.preferencePages.Workbench"
-            class="org.kermeta.utils.provisionner.eclipse.preferences.BundleProvisionnerPreferencePage"
-            id="org.kermeta.utils.provisionner.eclipse.preferences.BundleProvisionnerPreferencePage"
+            class="org.kermeta.utils.provisionner4eclipse.preferences.BundleProvisionnerPreferencePage"
+            id="org.kermeta.utils.provisionner4eclipse.preferences.BundleProvisionnerPreferencePage"
             name="External bundle provisionner (Experimental)">
       </page>
    </extension>
    <extension
          point="org.eclipse.core.runtime.preferences">
       <initializer
-            class="org.kermeta.utils.provisionner.eclipse.preferences.PreferenceInitializer">
+            class="org.kermeta.utils.provisionner4eclipse.preferences.PreferenceInitializer">
       </initializer>
    </extension>
    <extension
 	        point="org.eclipse.ui.startup">
-	     <startup class="org.kermeta.utils.provisionner.eclipse.ProvisionnerEarlyStartup"/>
+	     <startup class="org.kermeta.utils.provisionner4eclipse.ProvisionnerEarlyStartup"/>
 	</extension>
 
 </plugin>
