--- a/utilities_projects/org.kermeta.utils.provisionner4eclipse/pom.xml
+++ b/utilities_projects/org.kermeta.utils.provisionner4eclipse/pom.xml
@@ -163,8 +163,31 @@
             <artifactId>org.eclipse.ui.workbench</artifactId>
             <version>[3.5.2.M20100113-0800,)</version>
         </dependency>
-
-
-
     </dependencies>
+    
+    
+    <repositories>
+        <repository>
+            <id>kermeta Public</id>
+            <url>http://www.kermeta.org/maven2</url>
+        </repository>
+        <repository>
+            <id>kermeta PublicSnapShots</id>
+            <url>http://www.kermeta.org/maven2-snapshots</url>
+        </repository>
+     </repositories>
+	<distributionManagement>
+		<repository>
+      		<id>tipimouss-local-maven-repository</id>
+      		<name>Tipimouss Local release repository</name>
+      		<url>file:/var/www/html/maven2</url>
+      		<uniqueVersion>false</uniqueVersion>
+    	</repository>
+    	<snapshotRepository>
+      		<id>tipimouss-local-maven-snapshot-repository</id>
+      		<name>Tipimouss Local  snapshot repository</name>
+      		<url>file:/var/www/html/maven2-snapshots</url>
+      		<uniqueVersion>false</uniqueVersion>
+    	</snapshotRepository>
+	</distributionManagement>
 </project>
