add a version range for imported packages
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12144 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 66e821b2552fbd580a72dfb6d74f07344ecea480

--- a/utilities_projects/org.kermeta.utils.provisionner4eclipse/pom.xml
+++ b/utilities_projects/org.kermeta.utils.provisionner4eclipse/pom.xml
@@ -57,8 +57,8 @@
 							!org.eclipse.jface.*,
 							!org.eclipse.swt.*,
 							org.kermeta.utilities.eclipse.jface.preference,
-                        	org.osgi.framework,
-                        	org.ops4j.pax.url.mvn
+                        	org.osgi.framework;version="[1.0,3.0)",
+                        	org.ops4j.pax.url.mvn;version="[1.0,3.0)"
                         </Import-Package>
                         <!-- add extra element in the manifest, copy them from this file
                              ex: Bundle-ActivationPolicy: lazy -->
