--- a/art2_projects/org.kermeta.art2.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.model/pom.xml
@@ -22,7 +22,9 @@
     <build>
         <sourceDirectory>src</sourceDirectory>
         <!-- Add resources from the plugin structure -->
+        <!--
         <resources>
+
 	      	<resource>
 	        	<directory>.</directory>
 	        	<includes>
@@ -35,16 +37,8 @@
 	        	<targetPath>metamodel</targetPath>
 	      	</resource>
 	    </resources>
+            -->
         <plugins>
-
-            <plugin>
-                <artifactId>maven-eclipse-plugin</artifactId>
-                <version>2.8</version>
-                <configuration>
-                    <pde>true</pde>
-                </configuration>
-            </plugin>
-
 
 			<!-- Creation of the bundle jar and its manifest -->
             <plugin>
@@ -83,6 +77,12 @@
             <groupId>org.kermeta.emf</groupId>
             <artifactId>emf.lib</artifactId>
             <version>${emf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse</groupId>
+            <artifactId>emf</artifactId>
+            <version>3.5.0</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 
