fix Root node libraries attribute name regenerated edit and editor
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12220 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: db65aec9e2a7102b19851ff504a1583928689377

--- a/art2_projects/org.kermeta.art2.model.edit/plugin.properties
+++ b/art2_projects/org.kermeta.art2.model.edit/plugin.properties
@@ -122,3 +122,8 @@ _UI_MBinding_port_feature = Port
 _UI_MBinding_hub_feature = Hub
 _UI_Unknown_feature = Unspecified
 
+_UI_ComponentType_requiredLibs_feature = Required Libs
+_UI_ContainerRoot_thirdParties_feature = Third Parties
+_UI_TypedElement_genericTypes_feature = Generic Types
+_UI_DeployUnit_url_feature = Url
+_UI_ContainerRoot_libraries_feature = Libraries
